# rock-paper-scissors-collection

./: .gitmodules  LICENSE  README.md
framework/: .flake8
framework/.github/workflows/: python-publish.yml
framework/rock_scissors_paper_framework/: rsp.py
framework/rock_scissors_paper_framework/tests/: __init__.py  config_data.py  conftest.py  test_default_choices.py  test_game_config.py  test_hand_manager.py  test_ui.py
small/: README.md
small/rock_scissors_paper/: play.py
tiny/: README.md  pyproject.toml
tiny/rock_scissors_paper/: play.py
yagni/: README.md  pyproject.toml
yagni/rock_scissors_paper/: play.py
yagni/tests/: test_config.py  test_game.py  test_hand.py
