[tool.poetry]
name = "rock-scissors-paper"
version = "0.1.0"
description = "Rock Scissors Paper game"
authors = ["JamzTyson <151654652+JamzTyson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
